--- a/src/index.html
+++ b/src/index.html
@@ -1,13 +1,24 @@
-<!doctype html>
-<html lang="en">
-<head>
-  <meta charset="utf-8">
-  <title>JoseManuelDeveloperWeb</title>
-  <base href="/">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="favicon.ico">
-</head>
-<body>
-  <app-root></app-root>
-</body>
+<!DOCTYPE html>
+<html lang="es">
+  <head>
+    <meta charset="utf-8" />
+    <title>Jose Manuel Rodríguez Camacho | Web Developer</title>
+    <base href="/" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta
+      name="description"
+      content="¿Necesitas un desarrollador para tu sitio web? Hola, soy José Manuel Rodríguez Camacho, Full-Stack Web Developer y quiero ayudarte a llevar a cabo tu proyecto. Confía en mi para desarrollar tu producto haciendo uso de las últimas tecnologías, lenguajes y frameworks - Angular, JavaScript, HTML, CSS, Spring... -. Contáctame y llevaremos a cabo tu proyecto, sea cual sea: un ERP/CRM para tu empresa, una nueva idea de negocio, tu portfolio personal... "
+    />
+    <!-- Favicon -->
+    <link rel="icon" type="image/x-icon" href="favicon.ico" />
+
+    <!-- FontAwesome CDN -->
+    <link
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.css"
+      rel="stylesheet"
+    />
+  </head>
+  <body>
+    <app-root></app-root>
+  </body>
 </html>
