--- a/src/index.html
+++ b/src/index.html
@@ -14,7 +14,7 @@
 
     <!-- FontAwesome CDN -->
     <link
-      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.css"
+      href="https://atugatran.github.io/FontAwesome6Pro/css/all.min.css"
       rel="stylesheet"
     />
   </head>
