Content Max added for desktop and noscript

--- a/src/index.html
+++ b/src/index.html
@@ -20,5 +20,11 @@
   </head>
   <body>
     <app-root></app-root>
+    <noscript>
+      <p>
+        Esta aplicación requiere JavaScript para funcionar correctamente. Por
+        favor, habilítalo en tu navegador.
+      </p>
+    </noscript>
   </body>
 </html>
